Version 0.0.14 (2021-11-30)
- Add KeyMatic
- Add HmIP-MOD-OC8
- Add HmIP-PCBS, HmIP-PCBS2, HmIP-PCBS-BAT, HmIP-USBSM

Version 0.0.13 (2021-11-29)
- Add HmIP-MOD-HO, HmIP-MOD-TM
- Add sub_type to device/entity
- Add PRESET_NONE to climate
- Add level und state as additional entities for climate

Version 0.0.12 (2021-11-27)
- Add more type converter
- Move get_tls_context to helper
- Update requirements
- Cleanup constants
- Use flags from parameter_data
- Add wildcard start to exclude parameters that start with word
- Fix channel assignement for dimmers
- Fix entity name: add channel only if a parameter name exists is in multiple channels of the device.

Version 0.0.11 (2021-11-26)
- Fix: cover open/close default values to float
- Fix: add missing async/await
- make get_primary_client public

Version 0.0.10 (2021-11-26)
- Fix TLS handling

Version 0.0.9 (2021-11-25)
- Don't start connection checker for pydevccu
- Use a dummy hub for pydevccu
- Convert min, max, default values (fix for cover)

Version 0.0.8 (2021-11-25)
- Add button platform. This allows to use the virtual remotes of a ccu in automations.
- Cleanup entity inheritance.

Version 0.0.7 (2021-11-23)
- Switch to a non-permanent session for jsonrpc calls
  The json capabilities of a ccu are limited (3 parallel session!?!).
  So we no longer us a persisted session. (like pyhomematic)
- Enable write-only params as HMAction(solves a problem with climate writing CONTROL_MODE)

Version 0.0.6 (2021-11-22)
- Rename server to central_unit (after the extraction of the XMLRPC-Server server has not been a server anymore).
- Rename json_rpc to json_rpc_client
- Move json_rpc from client to central_unit to remove number of active sessions
- Add hub with option to enable own system variables as sensors

Version 0.0.5 (2021-11-20)
- Add method for virtual remote
- Update entity availability based on connection status
- Fix action_event for ha device trigger

Version 0.0.4 (2021-11-18)