@@ -133,7 +133,7 @@ IGNORED_PARAMETERS = [
     "BOOST_TIME",
     "BOOT",
     "BURST_LIMIT_WARNING",
-    'CLEAR_WINDOW_OPEN_SYMBOL',
+    "CLEAR_WINDOW_OPEN_SYMBOL",
     "DATE_TIME_UNKNOWN",
     "DECISION_VALUE",
     "DEVICE_IN_BOOTLOADER",
@@ -153,9 +153,8 @@ IGNORED_PARAMETERS = [
     "PARTY_TIME_START",
     "PROCESS",
     "QUICK_VETO_TIME",
-    "RELOCK_DELAY"
-    "SECTION",
-    'SET_SYMBOL_FOR_HEATING_PHASE',
+    "RELOCK_DELAY" "SECTION",
+    "SET_SYMBOL_FOR_HEATING_PHASE",
     "STATE_UNCERTAIN",
     "STICKY_UNREACH",
     "SWITCH_POINT_OCCURED",
